--- a/lmkrailsblog/app/views/welcome/index.html.erb
+++ b/lmkrailsblog/app/views/welcome/index.html.erb
@@ -1,1 +1,4 @@
 <h1>Welcome to my Rails Blog! </h1>
+<%= link_to 'Read My Blog', controller: 'articles' %>
+<br>
+<%= link_to 'Add New Article', new_article_path %>
