--- a/lmkrailsblog/app/views/articles/index.html.erb
+++ b/lmkrailsblog/app/views/articles/index.html.erb
@@ -4,4 +4,8 @@
   <h3><%= article.title %></h3>
   <p><%= article.text %></p>
   <%= link_to 'Edit', edit_article_path(article) %>
+  <%= link_to 'Delete', article_path(article), method: :delete, data: { confirm: 'Are you sure you want to delete this article?' } %>
   <% end %>
+  <br>
+  <br>
+  <%= link_to 'Add New Article', new_article_path %>
